This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

05-Mar-2002 (Lars Duening)  (3.3.411)
  - (gcollect.c, object.c) Inserted checks so that the driver doesn't try
       to access the non-existing name of the default wizlist entry (in
       particular the GC) (reported by Bardioc).

03-Mar-2002 (Lars Duening)  (3.3.410)
  - (mapping, backend.c, gcollect.c) Experimental: dirty mappings are
       not compacted immediately, but only after a certain time (for now
       10 minutes) since the last change has elapsed.

03-Mar-2002 (Lars Duening)  (3.3.409)
  - (dumpstat.c) Added the object load time to the OBJ_DUMP data (suggested by
       Menaures).
  - (dumpstat.c) Removed a memory leak in dumpstat() and dumpstat_dest().
  - (closure.c) When converting a lfun closure which is bound to a different
       object than it is defined in ('alien lfun closure'), to a string, the
       bound object is printed as well as the defining object.
  - (ed.c) Consecutive 'z' or 'Z' commands no longer repeat the previous
       current line (suggested by Menaures).

02-Mar-2002 (Lars Duening)  (3.3.408)
  - (configure) It would be useful if I actually updated the configure
       script.

02-Mar-2002 (Lars Duening)  (3.3.407)
  - (ptmalloc.c) Added some documentation and error checks (thanks, Gawain).
  - (configure, smalloc) Removed the CHECK_SMALLOC_TOTAL debugging code -
       the problem is fixed.
  - (configure, smalloc) New diagnostic option MALLOC_SBRK_TRACE to enable
       a log of all esbrk() calls and the stats of the allocation requests
       causing it. This formalizes the 'DEBUG: MEM ' diagnostics added
       in 3.3.399, though the particular string 'DEBUG: MEM ' has been
       dropped from the output.

02-Mar-2002 (Lars Duening)  (3.3.406)
  - (gcollect.c) During the 'clear' phase of the GC, struct member elements