@@ -51,12 +51,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 411)
-(Parent-Version lpmud 3-3 410)
-(Version-Log "Insert checks so that the driver won't access the non-existing name of the default wizlist entry.")
+(Project-Version lpmud 3-3 412)
+(Parent-Version lpmud 3-3 411)
+(Version-Log "Restricted the maximum size of a mempool memory block to 256 bytes in the userspace, to reduce fragmentation issues in the large block heap.")
 (New-Version-Log
 "")
-(Checkin-Time "Wed, 05 Mar 2003 15:31:28 -0700")
+(Checkin-Time "Wed, 05 Mar 2003 20:40:52 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -93,7 +93,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.59 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.474 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.475 644))
   (HISTORY (lpmud/f/49_HISTORY 1.306 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -148,11 +148,11 @@
   ;; Source files
   (src/access_check.h (lpmud/f/48_access_che 1.4 644))
   (src/access_check.c (lpmud/d/14_access_che 1.15.1.4 644))
-  (src/alloca.c (lpmud/d/13_alloca.c 1.10 644))
+  (src/alloca.c (lpmud/d/13_alloca.c 1.11 644))
   (src/actions.h (lpmud/d/11_actions.h 1.6.1.7 644))
   (src/actions.c (lpmud/d/12_actions.c 1.15.1.40 644))
   (src/array.h (lpmud/f/47_array.h 1.18.1.21 644))
-  (src/array.c (lpmud/d/12_array.c 1.46.1.47.1.2 644))
+  (src/array.c (lpmud/d/12_array.c 1.46.1.47.1.3 644))
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.7 644))
   (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.25 644))
   (src/bitstrings.h (lpmud/i/47_bitstrings 1.3 644))
@@ -185,15 +185,15 @@
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.35 644))
   (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.23 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.4 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.48 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.49 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.13 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.37 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.15 644))
   (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.57 644))
   (src/md5.h (lpmud/l/18_md5.h 1.2 644))
   (src/md5.c (lpmud/l/19_md5.c 1.6 644))
-  (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.6 644))
-  (src/mempools.c (lpmud/d/49_mempools.c 1.2.1.10 644))
+  (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.7 644))
+  (src/mempools.c (lpmud/d/49_mempools.c 1.2.1.11 644))
   (src/mregex.h (lpmud/e/29_rxcache.h 1.7.1.10 644))
   (src/mregex.c (lpmud/e/30_rxcache.c 1.11.1.27 644))
   (src/mstrings.h (lpmud/i/35_mstrings.h 1.20 644))
@@ -201,7 +201,7 @@
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/object.h (lpmud/44_object.h 1.34.1.19.1.3 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.88.1.23 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.88.1.24 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.6 644))
   (src/parser.c (lpmud/l/13_parser.c 1.1 644))
@@ -260,7 +260,7 @@
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.3 644))
   (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.34 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
-  (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.1 644))
+  (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.2 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
   (src/random.c (lpmud/d/28_random.c 1.12 644))
   (src/regexp.h (lpmud/35_regexp.h 1.11.1.5 644))
